--- a/home/dot-mozilla/firefox/release/chrome/css/chrome.css
+++ b/home/dot-mozilla/firefox/release/chrome/css/chrome.css
@@ -1,3 +1,7 @@
+ * {
+   font-family: "Tahoma", sans !important;
+}
+
 .toolbarbutton-1 > .toolbarbutton-icon,
 .toolbarbutton-1 > .toolbarbutton-badge-stack > .toolbarbutton-icon {
   width: 2.5em !important;
@@ -627,7 +631,7 @@ menupopup, panel {
 }
 
 menu, menuitem, menucaption, .subviewbutton{
-  padding: 2px 9px 2px 9px !important;
+  padding: 3px 8px 3px 8px !important;
 }
 
 toolbarbutton menupopup[placespopup] > :is(menu, menuitem),
@@ -688,6 +692,7 @@ browser {
   align-items: center !important;
   display: flex !important;
   flex-flow: row !important;
+  max-width: 100vw !important;
 }
 
 #statuspanel-label{
@@ -731,3 +736,16 @@ browser {
   content: 'Ολοκληρώθηκε' !important;
 }
 
+#main-menubar > menu {
+  border-bottom: 0 !important;
+  padding: 5px 8px 5px 8px !important;
+}
+
+#main-menubar > menu:hover {
+  color: white !important;
+  background-color: #316ac5 !important;
+}
+
+toolbar[type="menubar"] {
+  padding: 0 !important;
+}
