--- a/home/dot-mozilla/firefox/release/chrome/userContent.css
+++ b/home/dot-mozilla/firefox/release/chrome/userContent.css
@@ -1,202 +1,2 @@
+@import "./css/other-content.css";
 @import "./css/firefox-content.css";
-
-/* Checkbox */
-input[type=checkbox] {
-    appearance: none !important;
-    background-size: contain;
-    border: none !important;
-    height: 1em !important;
-    width: 1em !important;
-    margin: 0 !important;
-    background-image: url("./controls/checkbox-unchecked.svg") !important;
-}
-
-input[type=checkbox]:hover {
-    background-image: url("./controls/checkbox-hover.svg") !important;
-}
-
-input[type=checkbox]:active {
-    background-image: url("./controls/checkbox-unchecked-pressed.svg") !important;
-}
-
-input[type=checkbox]:checked {
-    background-image: url("./controls/checkbox-checked.svg") !important;
-}
-
-input[type=checkbox]:checked:hover {
-    background-image: url("./controls/checkbox-checked-hover.svg") !important;
-}
-
-input[type=checkbox]:checked:active {
-    background-image: url("./controls/checkbox-checked-pressed.svg") !important;
-}
-
-input[type=checkbox]:indeterminate {
-    background-image: url("./controls/checkbox-intermediate.svg") !important;
-}
-
-input[type=checkbox]:indeterminate:hover {
-    background-image: url("./controls/checkbox-intermediate-hover.svg") !important;
-}
-
-input[type=checkbox]:indeterminate:active {
-    background-image: url("./controls/checkbox-intermediate-pressed.svg") !important;
-}
-
-/* Checkbox */
-
-
-/* Radio */
-input[type=radio] {
-    appearance: none !important;
-    background-size: contain!important;
-    border: none !important;
-    height: 1em !important;
-    width: 1em !important;
-    margin: 0 !important;
-    background-image: url("./controls/radio-unchecked.svg") !important;
-}
-
-input[type=radio]:hover {
-    background-image: url("./controls/radio-unchecked-hover.svg") !important;
-}
-
-input[type=radio]:active {
-    background-image: url("./controls/radio-unchecked-pressed.svg") !important;
-}
-
-input[type=radio]:checked {
-    background-image: url("./controls/radio-checked.svg") !important;
-}
-
-input[type=radio]:checked:hover {
-    background-image: url("./controls/radio-checked-hover.svg") !important;
-}
-
-input[type=radio]:checked:active {
-    background-image: url("./controls/radio-checked-pressed.svg") !important;
-}
-
-/* Radio */
-
-/* Button */
-button,
-input[type=reset],
-input[type=submit],
-input[type=button] {
-    -webkit-appearance: none !important;
-    appearance: none !important;
-    border: 1px solid #003c74  !important;
-    background-color: rgb(245, 245, 241) !important;
-    background: linear-gradient(315deg, 
-     rgb(240, 240, 234) 0%,
-     rgb(241, 241, 236) 10%, 
-     rgb(245, 245, 241) 50%, 
-     rgb(249, 249, 248) 90%, 
-     rgb(250, 250, 249) 100%);
-    border-radius: 0.3rem !important;
-    box-shadow: inset -1px -1.5px 2px #d6d0c5 !important;
-    color: black !important;
-    font-weight: initial !important;
-    font-size: revert !important;
-}
-
-button:hover,
-input[type=reset]:hover,
-input[type=submit]:hover,
-input[type=button]:hover {
-    box-shadow: inset 0px 0px 0px 2px #fdd57e !important;
-}
-
-button:active,
-input[type=reset]:active,
-input[type=submit]:active,
-input[type=button]:active {
-    background: #e3e3db;
-    box-shadow: inset 2px 2px 2px #d1ccc1, inset 2px -1px 5px #f2f1ee !important;
-}
-
-button:default,
-input[type=reset]:default,
-input[type=submit]:default,
-input[type=button]:default {
-    box-shadow: inset 0px 0px 0px 2px #9ebdec;
-}
-
-/* Button */
-
-/* Textbox */
-input,
-input[type=text],
-input[type=search] {
-    border-radius: 0;
-    appearance: none;
-    border: 1px solid #7f9db9;
-}
-
-input,
-input[type=search]
-input[type=text]:focus-visible {
-    outline: none;
-}
-
-/* Textbox */
-
-/* Color */
-input[type=color] {
-    background-color: white;
-}
-/* Color */
-
-/* Range */
-input[type=range] {
-    border: none;
-}
-
-input[type=range]::-moz-range-thumb {
-    border: 1px solid #91a6b2;
-    border-radius: 0.2em;
-    height: 2em;
-    background: linear-gradient(270deg, rgb(195, 195, 192) 0%, rgb(241, 241, 236) 20%, rgb(243, 243, 239) 80%, rgb(247, 247, 244) 100%);
-    box-shadow: inset 0 2px 0 #48cb46, inset 0 -2px 0 #1b9719;
-}
-
-input[type=range]::-moz-range-thumb:hover {
-    box-shadow: inset 0 2px 0 #fbcb74, inset 0 -2px 0 #f6b234;
-}
-
-input[type=range]::-moz-range-thumb:active {
-    box-shadow: inset 0 2px 0 #66b65b, inset 0 -2px 0 #229312;
-}
-
-input[type=range]::-moz-range-track {
-    height: 1px;
-    background-color: #ddd7b9;
-}
-
-/* Range */
-
-/* Number */
-
-input[type=number]::-moz-number-spin-up,
-input[type=number]::-moz-number-spin-down {
-    width: 2em;
-}
-/* Number */
-
-/* PDF
-@-moz-document url(resource://pdf.js/web/viewer.html) {
-   #zoomIn::before {
-    mask-image: revert !important;
-    background-image: url("./zoom-in.svg") !important;
-    background-color: revert !important;
-}
-
-.toolbarButton:hover::before,
-.toolbarButton:focus-visible::before,
-.secondaryToolbarButton:hover::before,
-.secondaryToolbarButton:focus-visible::before {
-    background-color: revert  !important;;
-}
-}
- */
